--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["dwarven", "unpurchased"]
+  "cSpell.words": ["dwarven", "unpurchased"],
+  "python.REPL.enableREPLSmartSend": false
 }
